Change magnets and RF gun
RF now works and when initialising the controller you have to enter the
directory for the controllers (for RF and Magnets)

--- a/Config/velaCamera.config
+++ b/Config/velaCamera.config
@@ -60,7 +60,7 @@ NUMBER_OF_PIXELS_X = 1392;
 NUMBER_OF_PIXELS_Y = 1040;
 
 NAME    = CAM01;
-PV_ROOT = EBT-INJ-DIA-CAM-01:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-01:CAM:;
 SCREEN  = VC;
 X0   = 0;
 Y0   = 0;
@@ -71,7 +71,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM02;
-PV_ROOT = EBT-INJ-DIA-CAM-02:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-02:CAM:;
 SCREEN  = YAG1;
 X0   = 0;
 Y0   = 0;
@@ -83,7 +83,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM03;
-PV_ROOT = EBT-INJ-DIA-CAM-03:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-03:CAM:;
 SCREEN  = YAG2;
 X0   = 0;
 Y0   = 0;
@@ -95,7 +95,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM04;
-PV_ROOT = EBT-INJ-DIA-CAM-04:CAM:;
+PV_ROOT =VM- EBT-INJ-DIA-CAM-04:CAM:;
 SCREEN  = YAG3;
 X0   = 0;
 Y0   = 0;
@@ -108,7 +108,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM05;
-PV_ROOT = EBT-INJ-DIA-CAM-05:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-05:CAM:;
 SCREEN  = YAG4;
 X0   = 0;
 Y0   = 0;
@@ -121,7 +121,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM06;
-PV_ROOT = EBT-INJ-DIA-CAM-06:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-06:CAM:;
 SCREEN  = YAG5;
 X0   = 0;
 Y0   = 0;
@@ -134,7 +134,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM07;
-PV_ROOT = EBT-INJ-DIA-CAM-07:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-07:CAM:;
 SCREEN  = YAG6;
 X0   = 0;
 Y0   = 0;
@@ -146,7 +146,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM08;
-PV_ROOT = EBT-INJ-DIA-CAM-08:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-08:CAM:;
 SCREEN  = YAG7;
 X0   = 0;
 Y0   = 0;
@@ -158,7 +158,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM09;
-PV_ROOT = EBT-INJ-DIA-CAM-09:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-09:CAM:;
 SCREEN  = ED;
 X0   = 0;
 Y0   = 0;
@@ -170,7 +170,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM10;
-PV_ROOT = EBT-INJ-DIA-CAM-10:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-10:CAM:;
 SCREEN  = YAG8;
 X0   = 0;
 Y0   = 0;
@@ -182,7 +182,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM11;
-PV_ROOT = EBT-INJ-DIA-CAM-11:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-11:CAM:;
 SCREEN  = YAG9;
 X0   = 0;
 Y0   = 0;
@@ -193,7 +193,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM12;
-PV_ROOT = EBT-INJ-DIA-CAM-12:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-12:CAM:;
 SCREEN = BA1Y1;
 X0   = 0;
 Y0   = 0;
@@ -204,7 +204,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM13;
-PV_ROOT = EBT-INJ-DIA-CAM-13:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-13:CAM:;
 SCREEN  = BA1Y2;
 X0   = 0;
 Y0   = 0;
@@ -216,7 +216,7 @@ Y_PIX_2_MM = 0.0;
 
 
 NAME    = CAM14;
-PV_ROOT = EBT-INJ-DIA-CAM-14:CAM:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-14:CAM:;
 SCREEN  = BA2Y1;
 X0   = 0;
 Y0   = 0;
