--- a/Config/velaINJBeamPositionMonitors.config
+++ b/Config/velaINJBeamPositionMonitors.config
@@ -80,7 +80,7 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #scop2 is the second one in the list etc.
 
 NAME    = BPM01;
-PV_ROOT = EBT-INJ-DIA-BPMC-02;
+PV_ROOT = VM-EBT-INJ-DIA-BPMC-02;
 ATT1CAL = 7;
 ATT2CAL = 6;
 V1CAL 	= 0.990866126418;
@@ -91,7 +91,7 @@ XN      = 0;
 YN      = 0;
 
 NAME    = BPM02;
-PV_ROOT = EBT-INJ-DIA-BPMC-04;
+PV_ROOT = VM-EBT-INJ-DIA-BPMC-04;
 ATT1CAL = 6;
 ATT2CAL = 6;
 V1CAL 	= 0.994432777404;
@@ -102,7 +102,7 @@ XN      = 0;
 YN      = 0;
 
 NAME    = BPM03;
-PV_ROOT = EBT-INJ-DIA-BPMC-06;
+PV_ROOT = VM-EBT-INJ-DIA-BPMC-06;
 ATT1CAL = 4;
 ATT2CAL = 5;
 V1CAL 	= 0.999162302408;
@@ -113,7 +113,7 @@ XN      = 0;
 YN      = 0;
 
 NAME    = BPM04;
-PV_ROOT = EBT-INJ-DIA-BPMC-10;
+PV_ROOT = VM-EBT-INJ-DIA-BPMC-10;
 ATT1CAL = 4;
 ATT2CAL = 6;
 V1CAL 	= 1.02152888417;
@@ -124,7 +124,7 @@ XN      = 0;
 YN      = 0;
 
 NAME    = BPM05;
-PV_ROOT = EBT-INJ-DIA-BPMC-12;
+PV_ROOT = VM-EBT-INJ-DIA-BPMC-12;
 ATT1CAL = 6;
 ATT2CAL = 6;
 V1CAL 	= 0.994432777404;
@@ -135,7 +135,7 @@ XN      = 0;
 YN      = 0;
 
 NAME    = BPM06;
-PV_ROOT = EBT-INJ-DIA-BPMC-14;
+PV_ROOT = VM-EBT-INJ-DIA-BPMC-14;
 ATT1CAL = 4;
 ATT2CAL = 6;
 V1CAL 	= 1.02152888417;
