--- a/Config/velaQScope.config
+++ b/Config/velaQScope.config
@@ -47,7 +47,7 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #scop2 is the second one in the list etc.
 
 NAME    = SCOP01;
-PV_ROOT = EBT-INJ-SCOPE-01;
+PV_ROOT = VM-EBT-INJ-SCOPE-01;
 PV_SCOPE_TYPE = NUM;
 
 END_OF_DATA;
