--- a/Config/velaRFGunLLRF.config
+++ b/Config/velaRFGunLLRF.config
@@ -41,7 +41,7 @@ NUMBER_OF_OBJECTS = 1;      For sanity checks
 NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 NAME    = GUNLLRF;
-PV_ROOT = EBT:GUN-;
+PV_ROOT = VM-EBT:GUN:;
 
 
 END_OF_DATA;
