--- a/Config/velaQScopeTrace.config
+++ b/Config/velaQScopeTrace.config
@@ -14,13 +14,32 @@ VERSION = 1;
 
 PV_MONITORS_START;          These are the PVs that will be continuously monitored
 
-PV_SUFFIX_P   = P;
+PV_SUFFIX_TR1 = TR1;
 PV_COUNT      = 2002;
 PV_CHTYPE     = DBR_TIME_DOUBLE;
 PV_MASK       = DBE_VALUE;
+DIAG_TYPE     = WCM;
+
+PV_SUFFIX_TR2 = TR2;
+PV_COUNT      = 2002;
+PV_CHTYPE     = DBR_TIME_DOUBLE;
+PV_MASK       = DBE_VALUE;
+DIAG_TYPE     = ICT1;
+
+PV_SUFFIX_TR3 = TR3;
+PV_COUNT      = 2002;
+PV_CHTYPE     = DBR_TIME_DOUBLE;
+PV_MASK       = DBE_VALUE;
+DIAG_TYPE     = ED_FCUP;
+
+PV_SUFFIX_TR4 = TR4;
+PV_COUNT      = 2002;
+PV_CHTYPE     = DBR_TIME_DOUBLE;
+PV_MASK       = DBE_VALUE;
+DIAG_TYPE     = ICT2;
 
 OBJECTS_START;
-NUMBER_OF_OBJECTS = 4;      For sanity checks
+NUMBER_OF_OBJECTS = 1;      For sanity checks
 NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 
@@ -28,19 +47,7 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #scop2 is the second one in the list etc.
 
 NAME          = WVF01;
-PV_ROOT       = EBT-TST-SCOPE-01:;
+PV_ROOT       = EBT-INJ-SCOPE-01;
 TIMEBASE      = 0.00000002;  Currently the scope timebase is set to 200ns/div - this is needed for calculating areas
-
-NAME          = WVF02;
-PV_ROOT       = EBT-TST-SCOPE-02:;
-TIMEBASE      = 0.00000002;
-
-NAME          = WVF03;
-PV_ROOT       = EBT-TST-SCOPE-03:;
-TIMEBASE      = 0.00000002;
-
-NAME          = WVF04;
-PV_ROOT       = EBT-TST-SCOPE-04:;
-TIMEBASE      = 0.00000002;
 
 END_OF_DATA;
