--- a/Config/velaQScope.config
+++ b/Config/velaQScope.config
@@ -16,25 +16,25 @@ PV_MONITORS_START;          These are the PVs that will be continuously monitore
 
 PV_SUFFIX_P1  = P1;
 PV_COUNT      = 1;
-PV_CHTYPE     = DBR_DOUBLE;
+PV_CHTYPE     = DBR_TIME_DOUBLE;
 PV_MASK       = DBE_VALUE;
 DIAG_TYPE     = WCM;
 
 PV_SUFFIX_P2  = P2;
 PV_COUNT      = 1;
-PV_CHTYPE     = DBR_DOUBLE;
+PV_CHTYPE     = DBR_TIME_DOUBLE;
 PV_MASK       = DBE_VALUE;
 DIAG_TYPE     = ICT1;
 
 PV_SUFFIX_P3  = P3;
 PV_COUNT      = 1;
-PV_CHTYPE     = DBR_DOUBLE;
+PV_CHTYPE     = DBR_TIME_DOUBLE;
 PV_MASK       = DBE_VALUE;
 DIAG_TYPE     = ED_FCUP;
 
 PV_SUFFIX_P4  = P4;
 PV_COUNT      = 1;
-PV_CHTYPE     = DBR_DOUBLE;
+PV_CHTYPE     = DBR_TIME_DOUBLE;
 PV_MASK       = DBE_VALUE;
 DIAG_TYPE     = ICT2;
 
