Rearranged config files!
not all config files in VM folder are VM will work with VM yet...

--- a/Config/VM/velaBA1BeamPositionMonitors.config
+++ b/Config/VM/velaBA1BeamPositionMonitors.config
@@ -72,48 +72,15 @@ PV_CHTYPE          = DBR_TIME_DOUBLE;
 PV_MASK            = DBE_VALUE;
 
 OBJECTS_START;
-NUMBER_OF_OBJECTS = 6;      For sanity checks
+NUMBER_OF_OBJECTS = 2;      For sanity checks
 NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 
 #In the compiled code scop1 is the first one in this list,
 #scop2 is the second one in the list etc.
 
-NAME    = BPM01;
-PV_ROOT = EBT-INJ-DIA-BPMC-02;
-ATT1CAL = 7;
-ATT2CAL = 6;
-V1CAL 	= 0.990866126418;
-V2CAL	= 1.00521321356;
-QCAL 	= 68;
-MN      = 9.5;
-XN      = 0;
-YN      = 0;
-
-NAME    = BPM02;
-PV_ROOT = EBT-INJ-DIA-BPMC-04;
-ATT1CAL = 6;
-ATT2CAL = 6;
-V1CAL 	= 0.994432777404;
-V2CAL	= 0.991948485896;
-QCAL 	= 50;
-MN      = 9.5;
-XN      = 0;
-YN      = 0;
-
-NAME    = BPM03;
-PV_ROOT = EBT-INJ-DIA-BPMC-06;
-ATT1CAL = 4;
-ATT2CAL = 5;
-V1CAL 	= 0.999162302408;
-V2CAL	= 0.94357078895;
-QCAL 	= 53;
-MN      = 15;
-XN      = 0;
-YN      = 0;
-
-NAME    = BPM04;
-PV_ROOT = EBT-INJ-DIA-BPMC-10;
+NAME    = BA1-BPM01;
+PV_ROOT = EBT-INJ-DIA-BPMC-18;
 ATT1CAL = 4;
 ATT2CAL = 6;
 V1CAL 	= 1.02152888417;
@@ -123,19 +90,8 @@ MN      = 9.5;
 XN      = 0;
 YN      = 0;
 
-NAME    = BPM05;
-PV_ROOT = EBT-INJ-DIA-BPMC-12;
-ATT1CAL = 6;
-ATT2CAL = 6;
-V1CAL 	= 0.994432777404;
-V2CAL	= 0.991948485896;
-QCAL 	= 50;
-MN      = 9.5;
-XN      = 0;
-YN      = 0;
-
-NAME    = BPM06;
-PV_ROOT = EBT-INJ-DIA-BPMC-14;
+NAME    = BA1-BPM02;
+PV_ROOT = EBT-INJ-DIA-BPMC-16;
 ATT1CAL = 4;
 ATT2CAL = 6;
 V1CAL 	= 1.02152888417;
