--- a/Config/VM/velaINJMagnetsNRpsu.config
+++ b/Config/VM/velaINJMagnetsNRpsu.config
@@ -47,20 +47,20 @@ PV_ROOT_R = VM-EBT-INJ-MAG-PRR-07:;
 (___/\(______(__)(__(____/(___/
 
 PARENT_MAGNET = QUAD01;
-PV_ROOT_N = EBT-INJ-MAG-PRAN-01:;
-PV_ROOT_R = EBT-INJ-MAG-PRAR-01:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRAN-01:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRAR-01:;
 
 PARENT_MAGNET = QUAD02;
-PV_ROOT_N = EBT-INJ-MAG-PRBN-01:;
-PV_ROOT_R = EBT-INJ-MAG-PRBR-01:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRBN-01:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRBR-01:;
 
 PARENT_MAGNET = QUAD03;
-PV_ROOT_N = EBT-INJ-MAG-PRAN-02:;
-PV_ROOT_R = EBT-INJ-MAG-PRAR-02:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRAN-02:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRAR-02:;
 
 PARENT_MAGNET = QUAD04;
-PV_ROOT_N = EBT-INJ-MAG-PRBN-02:;
-PV_ROOT_R = EBT-INJ-MAG-PRBR-02:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRBN-02:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRBR-02:;
 
 ////// these are ganged.... !
 NUMBER_OF_ILOCKS  = 10;  Most have 4 except the ganged magnets. To Change redefine this before the "PARENT_MAGNET" paramater"
@@ -69,55 +69,55 @@ PARENT_MAGNET   = QUAD05;
 MAG_GANG_MEMBER = DIP02;
 MAG_GANG_MEMBER = DIP03;
 MAG_GANG_MEMBER = QUAD06;
-PV_ROOT_N = EBT-INJ-MAG-PRN-05:;
-PV_ROOT_R = EBT-INJ-MAG-PRR-05:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRN-05:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRR-05:;
 
 PARENT_MAGNET = QUAD06;
 MAG_GANG_MEMBER = DIP02;
 MAG_GANG_MEMBER = DIP03;
 MAG_GANG_MEMBER = QUAD05;
-PV_ROOT_N = EBT-INJ-MAG-PRN-05:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRN-05:;
 NUM_ILOCKS = 10;
-PV_ROOT_R = EBT-INJ-MAG-PRR-05:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRR-05:;
 
 /// Back to unganged
 NUMBER_OF_ILOCKS  = 4;  Most have 4 except the ganged magnets. To Change redefine this before the "PARENT_MAGNET" paramater"
 
 PARENT_MAGNET = QUAD07;
-PV_ROOT_N = EBT-INJ-MAG-PRAN-03:;
-PV_ROOT_R = EBT-INJ-MAG-PRAR-03:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRAN-03:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRAR-03:;
 
 PARENT_MAGNET = QUAD08;
-PV_ROOT_N = EBT-INJ-MAG-PRBN-03:;
-PV_ROOT_R = EBT-INJ-MAG-PRBR-03:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRBN-03:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRBR-03:;
 
 PARENT_MAGNET = QUAD09;
-PV_ROOT_N = EBT-INJ-MAG-PRAN-08:;
-PV_ROOT_R = EBT-INJ-MAG-PRAR-08:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRAN-08:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRAR-08:;
 
 PARENT_MAGNET = QUAD10;
-PV_ROOT_N = EBT-INJ-MAG-PRBN-08:;
-PV_ROOT_R = EBT-INJ-MAG-PRBR-08:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRBN-08:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRBR-08:;
 
 PARENT_MAGNET = QUAD11;
-PV_ROOT_N = EBT-INJ-MAG-PRAN-09:;
-PV_ROOT_R = EBT-INJ-MAG-PRAR-09:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRAN-09:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRAR-09:;
 
 PARENT_MAGNET = QUAD12;
-PV_ROOT_N = EBT-INJ-MAG-PRAN-10:;
-PV_ROOT_R = EBT-INJ-MAG-PRAR-10:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRAN-10:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRAR-10:;
 
 PARENT_MAGNET = QUAD13;
-PV_ROOT_N = EBT-INJ-MAG-PRBN-04:;
-PV_ROOT_R = EBT-INJ-MAG-PRBR-04:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRBN-04:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRBR-04:;
 
 PARENT_MAGNET = QUAD14;
-PV_ROOT_N = EBT-INJ-MAG-PRBN-10:;
-PV_ROOT_R = EBT-INJ-MAG-PRBR-10:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRBN-10:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRBR-10:;
 
 PARENT_MAGNET = QUAD15;
-PV_ROOT_N = EBT-INJ-MAG-PRBN-09:;
-PV_ROOT_R = EBT-INJ-MAG-PRBR-09:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRBN-09:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRBR-09:;
 
  ____ ____ ____ _____ __   ____ ___
 (  _ (_  _(  _ (  _  (  ) ( ___/ __)
@@ -125,8 +125,8 @@ PV_ROOT_R = EBT-INJ-MAG-PRBR-09:;
 (____(____(__) (_____(____(____(___/
 
 PARENT_MAGNET = DIP01;
-PV_ROOT_N = EBT-INJ-MAG-PRAN-04:;
-PV_ROOT_R = EBT-INJ-MAG-PRAR-04:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRAN-04:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRAR-04:;
 
 /// These are ganged
 NUMBER_OF_ILOCKS  = 10;  Most have 4 except the ganged magnets. To Change redefine this before the "PARENT_MAGNET" paramater"
@@ -135,14 +135,14 @@ PARENT_MAGNET = DIP02;
 MAG_GANG_MEMBER = DIP03;
 MAG_GANG_MEMBER = QUAD05;
 MAG_GANG_MEMBER = QUAD06;
-PV_ROOT_N = EBT-INJ-MAG-PRN-05:;
-PV_ROOT_R = EBT-INJ-MAG-PRR-05:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRN-05:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRR-05:;
 
 PARENT_MAGNET = DIP03;
 MAG_GANG_MEMBER = DIP02;
 MAG_GANG_MEMBER = QUAD05;
 MAG_GANG_MEMBER = QUAD06;
-PV_ROOT_N = EBT-INJ-MAG-PRN-05:;
-PV_ROOT_R = EBT-INJ-MAG-PRR-05:;
+PV_ROOT_N = VM-EBT-INJ-MAG-PRN-05:;
+PV_ROOT_R = VM-EBT-INJ-MAG-PRR-05:;
 
 END_OF_DATA;
