--- a/Config/VM/velaINJMagnets.config
+++ b/Config/VM/velaINJMagnets.config
@@ -48,8 +48,8 @@ NUMBER_OF_ILOCKS  = 0;  Most have 6 or 8 (but not the BSOL). Redefine before the
 (___(_____(____(___/
 
 NAME = BSOL;
-PV_ROOT = EBT-INJ-MAG-BSOL-01:  ;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-BSOL-01:  ;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = BSOL;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -60,7 +60,7 @@ DEGAUSS_TOLERANCE = 0.1;
 NUMBER_OF_ILOCKS  = 6;
 
 NAME = SOL;
-PV_ROOT = EBT-INJ-MAG-SOL-01:;
+PV_ROOT = VM-EBT-INJ-MAG-SOL-01:;
 MAG_TYPE = SOL;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.1;
@@ -76,8 +76,8 @@ SOL_DEGAUSS_TOLERANCE  = 2;
 NUMBER_OF_ILOCKS  = 8;
 
 NAME = HCOR01;
-PV_ROOT = EBT-INJ-MAG-HCOR-01:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-01:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -86,8 +86,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = HCOR02;
-PV_ROOT = EBT-INJ-MAG-HCOR-02:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-02:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -96,8 +96,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = HCOR03;
-PV_ROOT = EBT-INJ-MAG-HCOR-03:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-03:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -107,8 +107,8 @@ DEGAUSS_TOLERANCE  = 0.1;
 
 
 NAME = HCOR04;
-PV_ROOT = EBT-INJ-MAG-HCOR-04:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-04:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -117,8 +117,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = HCOR05;
-PV_ROOT = EBT-INJ-MAG-HCOR-05:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-05:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -127,8 +127,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = HCOR06;
-PV_ROOT = EBT-INJ-MAG-HCOR-06:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-06:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.015;
@@ -137,8 +137,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = HCOR07;
-PV_ROOT = EBT-INJ-MAG-HCOR-07:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-07:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -147,8 +147,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = HCOR08;
-PV_ROOT = EBT-INJ-MAG-HCOR-08:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-08:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -157,8 +157,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = HCOR09;
-PV_ROOT = EBT-INJ-MAG-HCOR-09:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-09:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -167,8 +167,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = HCOR10;
-PV_ROOT = EBT-INJ-MAG-HCOR-10:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-10:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.015;
@@ -177,8 +177,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = HCOR11;
-PV_ROOT = EBT-INJ-MAG-HCOR-11:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-11:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -191,8 +191,8 @@ DEGAUSS_TOLERANCE  = 0.1;
   \/ \___(_____(_)\_)
 
 NAME = VCOR01;
-PV_ROOT = EBT-INJ-MAG-VCOR-01:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-01:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -201,8 +201,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = VCOR02;
-PV_ROOT = EBT-INJ-MAG-VCOR-02:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-02:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -211,8 +211,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = VCOR03;
-PV_ROOT = EBT-INJ-MAG-VCOR-03:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-03:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -221,8 +221,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = VCOR04;
-PV_ROOT = EBT-INJ-MAG-VCOR-04:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-04:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -231,8 +231,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = VCOR05;
-PV_ROOT = EBT-INJ-MAG-VCOR-05:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-05:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -241,8 +241,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = VCOR06;
-PV_ROOT = EBT-INJ-MAG-VCOR-06:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-06:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -251,8 +251,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = VCOR07;
-PV_ROOT = EBT-INJ-MAG-VCOR-07:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-07:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -261,8 +261,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = VCOR08;
-PV_ROOT = EBT-INJ-MAG-VCOR-08:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-08:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -271,8 +271,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = VCOR09;
-PV_ROOT = EBT-INJ-MAG-VCOR-09:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-09:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -281,8 +281,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = VCOR10;
-PV_ROOT = EBT-INJ-MAG-VCOR-10:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-10:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -291,8 +291,8 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = VCOR11;
-PV_ROOT = EBT-INJ-MAG-VCOR-11:;
-PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-11:;
+PV_PSU_ROOT = VM-EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01;
@@ -307,7 +307,7 @@ DEGAUSS_TOLERANCE  = 0.1;
 NUMBER_OF_ILOCKS  = 6;
 
 NAME = QUAD01;
-PV_ROOT = EBT-INJ-MAG-QUAD-01:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-01:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -316,7 +316,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD02;
-PV_ROOT = EBT-INJ-MAG-QUAD-02:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -325,7 +325,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD03;
-PV_ROOT = EBT-INJ-MAG-QUAD-03:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -334,7 +334,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD04;
-PV_ROOT = EBT-INJ-MAG-QUAD-04:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-04:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -343,7 +343,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD05;
-PV_ROOT = EBT-INJ-MAG-QUAD-05:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-05:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR_GANGED;
 RI_TOLERANCE = 0.001;
@@ -352,7 +352,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD06;
-PV_ROOT = EBT-INJ-MAG-QUAD-06:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-06:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR_GANGED;
 RI_TOLERANCE = 0.001;
@@ -363,7 +363,7 @@ DEGAUSS_TOLERANCE  = 0.1;
 /// Back to unganged
 
 NAME = QUAD07;
-PV_ROOT = EBT-INJ-MAG-QUAD-07:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-07:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -372,7 +372,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD08;
-PV_ROOT = EBT-INJ-MAG-QUAD-08:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-08:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -381,7 +381,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD09;
-PV_ROOT = EBT-INJ-MAG-QUAD-09:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-09:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -390,7 +390,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD10;
-PV_ROOT = EBT-INJ-MAG-QUAD-10:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-10:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -399,7 +399,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD11;
-PV_ROOT = EBT-INJ-MAG-QUAD-11:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-11:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 NUM_ILOCKS = 6;
@@ -409,7 +409,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD12;
-PV_ROOT = EBT-INJ-MAG-QUAD-12:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-12:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -417,7 +417,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD13;
-PV_ROOT = EBT-INJ-MAG-QUAD-13:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-13:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -426,7 +426,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD14;
-PV_ROOT = EBT-INJ-MAG-QUAD-14:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-14:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -435,7 +435,7 @@ DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -
 DEGAUSS_TOLERANCE  = 0.1;
 
 NAME = QUAD15;
-PV_ROOT = EBT-INJ-MAG-QUAD-15:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-15:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -449,7 +449,7 @@ DEGAUSS_TOLERANCE  = 0.1;
 (____(____(__) (_____(____(____(___/
 
 NAME = DIP01;
-PV_ROOT = EBT-INJ-MAG-DIP-01:;
+PV_ROOT = VM-EBT-INJ-MAG-DIP-01:;
 MAG_TYPE = DIP;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001;
@@ -462,7 +462,7 @@ DEGAUSS_TOLERANCE  = 0.1;
 NUMBER_OF_ILOCKS  = 8;
 
 NAME = DIP02;
-PV_ROOT = EBT-INJ-MAG-DIP-02:;
+PV_ROOT = VM-EBT-INJ-MAG-DIP-02:;
 MAG_TYPE = DIP;
 MAG_REV_TYPE = NR_GANGED;
 RI_TOLERANCE = 0.001;
@@ -473,7 +473,7 @@ DEGAUSS_TOLERANCE  = 0.1;
 NUMBER_OF_ILOCKS  = 6;
 
 NAME = DIP03;
-PV_ROOT = EBT-INJ-MAG-DIP-03:;
+PV_ROOT = VM-EBT-INJ-MAG-DIP-03:;
 MAG_TYPE = DIP;
 MAG_REV_TYPE = NR_GANGED;
 RI_TOLERANCE = 0.001;
