--- a/Config/VM/velaPhotoInjectorLaserShutter.config
+++ b/Config/VM/velaPhotoInjectorLaserShutter.config
@@ -1,18 +1,20 @@
-VELA INJ MAG NR-PSU CONFIG FILE v1
+VELA PHOTO-INJECTOR LASER SHUTTER CONFIG FILE v1
 
-Feel free to decorate this file with comments,
+Feel free to write any comments all over this file,
 although beware, try not to use any of the keywords used to define parameters, etc!
 
 capitalised words / phrases are keywords the reader searches for
 spaces are skipped
 ; indicates end of line (data entry)
-on a keyword line comments can go after;
+on a keyword line comments can go after ;
 
 START_OF_DATA;
 
 VERSION = 1;
 
 PV_COMMANDS_START;              These are Pvs that are needed to send commands, i.e. switch things on / off, They are not monitored.
+
+#pv_suffix must come first before other paramaters to be added to the struct.
 
 PV_SUFFIX_ON = On;
 PV_CHTYPE    = DBR_ENUM;
@@ -28,18 +30,18 @@ PV_CHTYPE     = DBR_ENUM;
 PV_MASK       = DBE_VALUE;
 
 OBJECTS_START;
-NUMBER_OF_OBJECTS = 1;
-NUMBER_OF_ILOCKS  = 4;  Most have 4 except the ganged magnets. To Change redefine this before the "PARENT_MAGNET" paramater"
- ___ _____ __   ___
-/ __(  _  (  ) / __)
-\__ \)(_)( )(__\__ \
-(___(_____(____(___/
 
-N_OBJECT_START;
-PARENT_MAGNET = SOL;
-PV_ROOT_N = VM-EBT-INJ-MAG-PRN-07:;
-PV_ROOT_R = VM-EBT-INJ-MAG-PRR-07:;
+NUMBER_OF_OBJECTS = 2;      For sanity checks
+NUMBER_OF_ILOCKS  = 4;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
+#In the compiled code shutter1 is the first one in this list,
+#shutter2 is the second one in the list etc.
+#name must come first before other factors
 
+NAME    = SHUT01;
+PV_ROOT = EBT-INJ-LSR-SHUT-01: ;
+
+NAME    = SHUT02;
+PV_ROOT = EBT-INJ-LSR-SHUT-02: ;
 
 END_OF_DATA;
