--- a/Config/VM/velaQScopeTrace.config
+++ b/Config/VM/velaQScopeTrace.config
@@ -1,4 +1,4 @@
-VELA SCOPE CONFIG FILE v1
+VELA SCOPE TRACE CONFIG FILE v1
 
 Feel free to write any comments all over this file,
 although beware, try not to use any of the keywords used to define parameters, etc!
@@ -14,26 +14,26 @@ VERSION = 1;
 
 PV_MONITORS_START;          These are the PVs that will be continuously monitored
 
-PV_SUFFIX_P1  = P1;
-PV_COUNT      = 1;
+PV_SUFFIX_TR1 = TR1;
+PV_COUNT      = 2002;
 PV_CHTYPE     = DBR_TIME_DOUBLE;
 PV_MASK       = DBE_VALUE;
 DIAG_TYPE     = WCM;
 
-PV_SUFFIX_P2  = P2;
-PV_COUNT      = 1;
+PV_SUFFIX_TR2 = TR2;
+PV_COUNT      = 2002;
 PV_CHTYPE     = DBR_TIME_DOUBLE;
 PV_MASK       = DBE_VALUE;
 DIAG_TYPE     = ICT1;
 
-PV_SUFFIX_P3  = P3;
-PV_COUNT      = 1;
+PV_SUFFIX_TR3 = TR3;
+PV_COUNT      = 2002;
 PV_CHTYPE     = DBR_TIME_DOUBLE;
 PV_MASK       = DBE_VALUE;
 DIAG_TYPE     = ED_FCUP;
 
-PV_SUFFIX_P4  = P4;
-PV_COUNT      = 1;
+PV_SUFFIX_TR4 = TR4;
+PV_COUNT      = 2002;
 PV_CHTYPE     = DBR_TIME_DOUBLE;
 PV_MASK       = DBE_VALUE;
 DIAG_TYPE     = ICT2;
@@ -46,8 +46,8 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #In the compiled code scop1 is the first one in this list,
 #scop2 is the second one in the list etc.
 
-NAME    = SCOP01;
-PV_ROOT = EBT-INJ-SCOPE-01;
-PV_SCOPE_TYPE = NUM;
+NAME          = WVF01;
+PV_ROOT       = EBT-INJ-SCOPE-01;
+TIMEBASE      = 0.00000002;  Currently the scope timebase is set to 200ns/div - this is needed for calculating areas
 
 END_OF_DATA;
