Added 'VM-' onto PVs names even if they dont exist on VM  yet (stop clashes)

--- a/Config/VM/velaBA1BeamPositionMonitors.config
+++ b/Config/VM/velaBA1BeamPositionMonitors.config
@@ -80,7 +80,7 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #scop2 is the second one in the list etc.
 
 NAME    = BA1-BPM01;
-PV_ROOT = EBT-INJ-DIA-BPMC-18;
+PV_ROOT = VM-EBT-INJ-DIA-BPMC-18;
 ATT1CAL = 4;
 ATT2CAL = 6;
 V1CAL 	= 1.02152888417;
@@ -91,7 +91,7 @@ XN      = 0;
 YN      = 0;
 
 NAME    = BA1-BPM02;
-PV_ROOT = EBT-INJ-DIA-BPMC-16;
+PV_ROOT = VM-EBT-INJ-DIA-BPMC-16;
 ATT1CAL = 4;
 ATT2CAL = 6;
 V1CAL 	= 1.02152888417;
