--- a/Config/VM/velaBA2SimpleScreens.config
+++ b/Config/VM/velaBA2SimpleScreens.config
@@ -33,7 +33,7 @@ NUMBER_OF_ILOCKS = 2;		#If the number of interlocks changes between objects, the
 #however it solved the problem of the program not subscribing to the chids in the new version.
 
 NAME = YAG-01-BA2;
-PV_ROOT = EBT-BA2-DIA-YAG-01:;
+PV_ROOT = VM-EBT-BA2-DIA-YAG-01:;
 IN = 1.0;
 OUT = 0.0;
 
