--- a/Config/VM/velaINJComplexScreens.config
+++ b/Config/VM/velaINJComplexScreens.config
@@ -74,7 +74,7 @@ NUMBER_OF_ILOCKS = 0;		#If the number of interlocks changes between objects, the
 
 
 NAME = YAG-01;
-PV_ROOT = EBT-INJ-DIA-YAG-01:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-01:;
 H_MIRROR = 42.580;
 H_50U_SLIT = 75.317;
 H_25U_SLIT = 100.332;
@@ -87,7 +87,7 @@ V_OUT = 0.0085;
 
 
 NAME = YAG-02;
-PV_ROOT = EBT-INJ-DIA-YAG-02:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-02:;
 V_YAG = 51.440;
 V_SLIT = 105.800;
 H_50U_SLIT = 143.672;
@@ -96,7 +96,7 @@ V_OUT = 0.0055;
 
 
 NAME = YAG-03;
-PV_ROOT = EBT-INJ-DIA-YAG-03:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-03:;
 V_YAG = 100.895;
 H_50U_SLIT = 142;
 H_OUT = 0.004;
