--- a/Config/VM/velaINJSimpleScreens.config
+++ b/Config/VM/velaINJSimpleScreens.config
@@ -34,32 +34,32 @@ NUMBER_OF_ILOCKS = 2;		#If the number of interlocks changes between objects, the
 
 
 NAME = YAG-04;
-PV_ROOT = EBT-INJ-DIA-YAG-04:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-04:;
 IN = 1.0;
 OUT = 0.0;
 
 NAME = YAG-05;
-PV_ROOT = EBT-INJ-DIA-YAG-05:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-05:;
 IN = 1.0;
 OUT = 0.0;
 
 NAME = YAG-06;
-PV_ROOT = EBT-INJ-DIA-YAG-06:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-06:;
 IN = 1.0;
 OUT = 0.0;
 
 NAME = YAG-07;
-PV_ROOT = EBT-INJ-DIA-YAG-07:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-07:;
 IN = 1.0;
 OUT = 0.0;
 
 NAME = YAG-08;
-PV_ROOT = EBT-INJ-DIA-YAG-08:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-08:;
 IN = 1.0;
 OUT = 0.0;
 
 NAME = YAG-09;
-PV_ROOT = EBT-INJ-DIA-YAG-09:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-09:;
 IN = 1.0;
 OUT = 0.0;
 
