--- a/Config/VM/velaPhotoInjectorLaserShutter.config
+++ b/Config/VM/velaPhotoInjectorLaserShutter.config
@@ -39,9 +39,9 @@ NUMBER_OF_ILOCKS  = 4;      If the number of interlocks changes between objects,
 #name must come first before other factors
 
 NAME    = SHUT01;
-PV_ROOT = EBT-INJ-LSR-SHUT-01: ;
+PV_ROOT = VM-EBT-INJ-LSR-SHUT-01: ;
 
 NAME    = SHUT02;
-PV_ROOT = EBT-INJ-LSR-SHUT-02: ;
+PV_ROOT = VM-EBT-INJ-LSR-SHUT-02: ;
 
 END_OF_DATA;
