--- a/Config/VM/velaQScopeTrace.config
+++ b/Config/VM/velaQScopeTrace.config
@@ -47,7 +47,7 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #scop2 is the second one in the list etc.
 
 NAME          = WVF01;
-PV_ROOT       = EBT-INJ-SCOPE-01;
+PV_ROOT       = VM-EBT-INJ-SCOPE-01;
 TIMEBASE      = 0.00000002;  Currently the scope timebase is set to 200ns/div - this is needed for calculating areas
 
 END_OF_DATA;
