--- a/Config/VM/velaBA1SimpleScreens.config
+++ b/Config/VM/velaBA1SimpleScreens.config
@@ -33,12 +33,12 @@ NUMBER_OF_ILOCKS = 2;		#If the number of interlocks changes between objects, the
 #however it solved the problem of the program not subscribing to the chids in the new version.
 
 NAME = YAG-01-BA1;
-PV_ROOT = EBT-BA1-DIA-YAG-01:;
+PV_ROOT = VM-EBT-BA1-DIA-YAG-01:;
 IN = 1.0;
 OUT = 0.0;
 
 NAME = YAG-02-BA1;
-PV_ROOT = EBT-BA1-DIA-YAG-02:;
+PV_ROOT = VM-EBT-BA1-DIA-YAG-02:;
 IN = 1.0;
 OUT = 0.0;
 
