--- a/Config/VM/velaCameraIOC.config
+++ b/Config/VM/velaCameraIOC.config
@@ -29,6 +29,6 @@ NUMBER_OF_OBJECTS = 1; For sanity checks
 NUMBER_OF_ILOCKS  = 0;  If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 NAME    = CAM-IOC;
-PV_ROOT = EBT-CS-CS4A-IOC-01:;
+PV_ROOT = VM-EBT-CS-CS4A-IOC-01:;
 
 END_OF_DATA;
