--- a/Config/VM/velaRFGunModulator.config
+++ b/Config/VM/velaRFGunModulator.config
@@ -54,7 +54,7 @@ NUMBER_OF_OBJECTS = 1;      For sanity checks
 NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 NAME  = GUNMODULATOR;
-PV_ROOT = EBT-INJ-RF-MOD-01:Sys:
+PV_ROOT = VM-EBT-INJ-RF-MOD-01:Sys:
 
 GOOD_MOD_ERR = 2000;
 GOOD_MOD_ERR = 5000;
