--- a/Config/VM/velaRFGunPower.config
+++ b/Config/VM/velaRFGunPower.config
@@ -57,9 +57,9 @@ NUMBER_OF_OBJECTS = 2;      For sanity checks
 NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 NAME    = CAVITY;
-PV_ROOT = EBT-INJ-RF-POW-01: ;
+PV_ROOT = VM-EBT-INJ-RF-POW-01: ;
 
 NAME    = KLYSTRON;
-PV_ROOT = EBT-INJ-RF-POW-02: ;
+PV_ROOT = VM-EBT-INJ-RF-POW-02: ;
 
 END_OF_DATA;
