--- a/Python%20Modules/bpms/bpms.cbp
+++ b/Python%20Modules/bpms/bpms.cbp
@@ -7,18 +7,25 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/bpms" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/VELA_CLARA_BPM_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
-					<Add option="/W3" />
-					<Add option="/DBUILD_DLL" />
-					<Add option="/Zi" />
-					<Add option="/D_DEBUG" />
 					<Add option="/MDd" />
+					<Add option="/W3" />
+					<Add option="/Zi" />
+					<Add option="/EHsc" />
+					<Add option="/DBUILD_DLL" />
+					<Add option="/D_DEBUG" />
+					<Add directory="include" />
+					<Add directory="../../Hardware" />
+					<Add directory="../../Hardware/beamPositionMonitor" />
+					<Add directory="../../Hardware/scope" />
+					<Add directory="../../Structs" />
+					<Add directory="../../Utilities" />
 				</Compiler>
 				<Linker>
 					<Add option="/DEBUG" />
@@ -26,34 +33,60 @@
 					<Add library="user32" />
 				</Linker>
 				<ExtraCommands>
-					<Add after='mt.exe /nologo /manifest &quot;bin\Debug\bpms.dll.manifest&quot; /outputresource:&quot;bin\Debug\bpms.dll&quot;;2' />
+					<Add after='cmd /c copy /y &quot;$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/bpms" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/VELA_CLARA_BPM_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
-					<Add option="/W3" />
-					<Add option="/DBUILD_DLL" />
-					<Add option="/Ox" />
-					<Add option="/DNDEBUG" />
 					<Add option="/MD" />
+					<Add option="/Ox" />
+					<Add option="/W3" />
+					<Add option="/EHsc" />
+					<Add option="/DBUILD_DLL" />
+					<Add option="/DNDEBUG" />
+					<Add directory="../../Hardware" />
+					<Add directory="../../Hardware/beamPositionMonitor" />
+					<Add directory="../../Hardware/scope" />
+					<Add directory="../../Structs" />
+					<Add directory="../../Utilities" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="/INCREMENTAL:NO" />
 					<Add library="user32" />
 				</Linker>
 				<ExtraCommands>
-					<Add after='mt.exe /nologo /manifest &quot;bin\Release\bpms.dll.manifest&quot; /outputresource:&quot;bin\Release\bpms.dll&quot;;2' />
+					<Add after='cmd /c copy /y &quot;$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<Unit filename="../../Hardware/beamPositionMonitor/beamPositionMonitorController.cpp" />
+		<Unit filename="../../Hardware/beamPositionMonitor/beamPositionMonitorController.h" />
+		<Unit filename="../../Hardware/beamPositionMonitor/beamPositionMonitorInterface.cpp" />
+		<Unit filename="../../Hardware/beamPositionMonitor/beamPositionMonitorInterface.h" />
+		<Unit filename="../../Hardware/controller.cpp" />
+		<Unit filename="../../Hardware/controller.h" />
+		<Unit filename="../../Hardware/interface.cpp" />
+		<Unit filename="../../Hardware/interface.h" />
+		<Unit filename="../../Structs/beamPositionMonitorStructs.h" />
+		<Unit filename="../../Structs/structs.h" />
+		<Unit filename="../../Utilities/baseObject.cpp" />
+		<Unit filename="../../Utilities/baseObject.h" />
+		<Unit filename="../../Utilities/beamPositionMonitorConfigReader.cpp" />
+		<Unit filename="../../Utilities/beamPositionMonitorConfigReader.h" />
+		<Unit filename="../../Utilities/configDefinitions.h" />
+		<Unit filename="../../Utilities/configReader.cpp" />
+		<Unit filename="../../Utilities/configReader.h" />
+		<Unit filename="include/VCBPMs.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="main.h" />
+		<Unit filename="src/VCBPMs.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
