--- a/Python Modules/magnets/magnetPYD.cbp
+++ b/Python Modules/magnets/magnetPYD.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="../../../VELA-CLARA-Controllers/bin/Debug/VELA_CLARA_MagnetControl" prefix_auto="1" extension_auto="1" />
+				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VM-Controllers\VELA-CLARA-Controllers\bin\Debug\VELA_CLARA_MagnetControl" prefix_auto="1" extension_auto="1" />
 				<Option object_output="../../../VELA-CLARA-Controllers/bin/obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
