Add POSITION, SLOPE, INTERCEPT keywords
We are adding some 'offline' data to the magnet config file. POSITION is the longitudinal position of the magnet in the lattice. SLOPE and INTERCEPT are used to convert currents to integrated strength values. This will all be useful in putting together a magnet table (amongst other things).

--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -48,6 +48,7 @@ NUMBER_OF_ILOCKS  = 0;  Most have 6 or 8 (but not the BSOL). Redefine before the
 (___(_____(____(___/
 
 NAME = BSOL;
+POSITION = 0; longitudinal position along the lattice (in metres) - used to define magnet order
 PV_ROOT = EBT-INJ-MAG-BSOL-01:  ;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = BSOL;
@@ -61,6 +62,9 @@ MAG_SET_MAX_WAIT_TIME = 45;
 NUMBER_OF_ILOCKS  = 6;
 
 NAME = SOL;
+POSITION = 0.138;
+SLOPE = 0.00120539455199735;      integrated strength = slope * current + intercept
+INTERCEPT = 0.00103087438201299;  (of course integrated strength units depend on magnet type)
 PV_ROOT = EBT-INJ-MAG-SOL-01:;
 MAG_TYPE = SOL;
 MAG_REV_TYPE = NR;
