--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -49,6 +49,7 @@ NUMBER_OF_ILOCKS  = 0;  Most have 6 or 8 (but not the BSOL). Redefine before the
 
 NAME = BSOL;
 POSITION = 0; longitudinal position along the lattice (in metres) - used to define magnet order
+MANUFACTURER = Strathclyde;
 PV_ROOT = EBT-INJ-MAG-BSOL-01:  ;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = BSOL;
@@ -82,6 +83,11 @@ MAG_SET_MAX_WAIT_TIME = 45;
 NUMBER_OF_ILOCKS  = 8;
 
 NAME = HCOR01;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0002;
+SLOPE = 0.0989613526570049;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-01:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
@@ -93,6 +99,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR02;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0006;
+SLOPE = 0.101352657004831;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-02:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
@@ -104,6 +115,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR03;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0010;
+SLOPE = 0.101352657004831;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-03:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
@@ -114,8 +130,12 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
-
 NAME = HCOR04;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0003;
+SLOPE = 0.101763285024155;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-04:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
@@ -127,6 +147,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR05;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0001;
+SLOPE = 0.103007246376812;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-05:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
@@ -138,6 +163,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR06;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0004;
+SLOPE = 0.102617753623188;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-06:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
@@ -149,6 +179,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR07;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0005;
+SLOPE = 0.103037439613527;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-07:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
@@ -160,6 +195,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR08;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0011;
+SLOPE = 0.107276570048309;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-08:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
@@ -171,6 +211,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR09;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0008;
+SLOPE = 0.108559782608696;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-09:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
@@ -208,6 +253,11 @@ MAG_SET_MAX_WAIT_TIME = 45;
   \/ \___(_____(_)\_)
 
 NAME = VCOR01;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0002;
+SLOPE = 0.0989613526570049;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-01:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -219,6 +269,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR02;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0006;
+SLOPE = 0.101352657004831;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-02:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -230,6 +285,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR03;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0010;
+SLOPE = 0.101352657004831;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-03:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -241,6 +301,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR04;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0003;
+SLOPE = 0.101763285024155;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-04:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -252,6 +317,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR05;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0001;
+SLOPE = 0.103007246376812;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-05:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -263,6 +333,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR06;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0004;
+SLOPE = 0.102617753623188;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-06:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -274,6 +349,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR07;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0005;
+SLOPE = 0.103037439613527;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-07:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -285,6 +365,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR08;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0011;
+SLOPE = 0.107276570048309;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-08:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -296,6 +381,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR09;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0008;
+SLOPE = 0.108559782608696;
+INTERCEPT = 0;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-09:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
