Data for most magnets
Added manufacturer, serial number, slope, intercept, measurement data
location for most magnets. Some need to be checked (e.g. QUAD15).

--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -425,6 +425,11 @@ MAG_SET_MAX_WAIT_TIME = 45;
 NUMBER_OF_ILOCKS  = 6;
 
 NAME = QUAD01;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EBTFQ2M08;
+SLOPE = 0.104277992372682;
+INTERCEPT = 0.0025482705782263;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-01:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -435,6 +440,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD02;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EBTFQ2M04;
+SLOPE = 0.104135447175047;
+INTERCEPT = 0.00237250194124666;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -445,6 +455,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD03;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EBTFQ2M07;
+SLOPE = 0.10423548260287;
+INTERCEPT = 0.00257735827842411;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -455,6 +470,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD04;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EBTFQ2M09;
+SLOPE = 0.104228631153691;
+INTERCEPT = 0.00236407828336409;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-04:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -465,6 +485,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD05;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EBTFQ2M05;
+SLOPE = 0.104257662272452;
+INTERCEPT = 0.00260277456365575;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-05:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR_GANGED;
@@ -475,6 +500,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD06;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EBTFQ2M02;
+SLOPE = 0.104277150901771;
+INTERCEPT = 0.00276894282540757;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-06:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR_GANGED;
@@ -487,6 +517,11 @@ MAG_SET_MAX_WAIT_TIME = 45;
 /// Back to unganged
 
 NAME = QUAD07;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EBTFQ2M03;
+SLOPE = 0.102760380363229;
+INTERCEPT = 0.0025714442257629;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-07:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -497,6 +532,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD08;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EBTFQ2M01;
+SLOPE = 0.102891849667145;
+INTERCEPT = 0.00267552683439267;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-08:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -507,6 +547,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD09;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EMDQM06;
+SLOPE = 0.111939163037871;
+INTERCEPT = -0.00132252769474545;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-09:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -517,6 +562,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD10;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EMDQM05;
+SLOPE = 0.111966157109812;
+INTERCEPT = -0.00170732356716569;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-10:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -527,6 +577,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD11;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EMDQM02;
+SLOPE = 0.112072763436341;
+INTERCEPT = -0.00182025848896622;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-11:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -538,6 +593,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD12;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EMIQM04;
+SLOPE = 1.58996386665694;
+INTERCEPT = 6.76912235527686E-05;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Injection line\SCX Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-12:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -547,6 +607,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD13;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EBTFQ2M06;
+SLOPE = 0.104257662272452;
+INTERCEPT = 0.0025714442257629;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-13:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -557,6 +622,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD14;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EMIQM05;
+SLOPE = 1.59235070995081;
+INTERCEPT = -0.022877181714572;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Injection line\SCX Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-14:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -582,6 +652,11 @@ MAG_SET_MAX_WAIT_TIME = 45;
 (____(____(__) (_____(____(____(___/
 
 NAME = DIP01;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EBTFDIM02;
+SLOPE = 0.0193137838642453;
+INTERCEPT = 0.0007;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-DIP-01:;
 MAG_TYPE = DIP;
 MAG_REV_TYPE = NR;
@@ -596,6 +671,11 @@ MAG_SET_MAX_WAIT_TIME = 45;
 NUMBER_OF_ILOCKS  = 8;
 
 NAME = DIP02;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EBTFDIM01;
+SLOPE = 0.0193449781659389;
+INTERCEPT = 0.0007;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-DIP-02:;
 MAG_TYPE = DIP;
 MAG_REV_TYPE = NR_GANGED;
@@ -608,6 +688,11 @@ MAG_SET_MAX_WAIT_TIME = 45;
 NUMBER_OF_ILOCKS  = 6;
 
 NAME = DIP03;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EBTFDIM03;
+SLOPE = 0.0193770450006374;
+INTERCEPT = 0.0006;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-DIP-03:;
 MAG_TYPE = DIP;
 MAG_REV_TYPE = NR_GANGED;
