--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -429,6 +429,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M08;
 SLOPE = 0.104277992372682;
 INTERCEPT = 0.0025482705782263;
+MAGNETIC_LENGTH = 125.368867474869;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-01:;
 MAG_TYPE = QUAD;
@@ -444,6 +445,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M04;
 SLOPE = 0.104135447175047;
 INTERCEPT = 0.00237250194124666;
+MAGNETIC_LENGTH = 125.145131747801;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
@@ -459,6 +461,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M07;
 SLOPE = 0.10423548260287;
 INTERCEPT = 0.00257735827842411;
+MAGNETIC_LENGTH = 125.337920371927;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
@@ -474,6 +477,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M09;
 SLOPE = 0.104228631153691;
 INTERCEPT = 0.00236407828336409;
+MAGNETIC_LENGTH = 125.244281671835;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-04:;
 MAG_TYPE = QUAD;
@@ -489,6 +493,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M05;
 SLOPE = 0.104257662272452;
 INTERCEPT = 0.00260277456365575;
+MAGNETIC_LENGTH = 125.223958037202;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-05:;
 MAG_TYPE = QUAD;
@@ -504,6 +509,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M02;
 SLOPE = 0.104277150901771;
 INTERCEPT = 0.00276894282540757;
+MAGNETIC_LENGTH = 125.033079276906;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-06:;
 MAG_TYPE = QUAD;
@@ -521,6 +527,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M03;
 SLOPE = 0.102760380363229;
 INTERCEPT = 0.0025714442257629;
+MAGNETIC_LENGTH = 125.299909233924;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-07:;
 MAG_TYPE = QUAD;
@@ -536,6 +543,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M01;
 SLOPE = 0.102891849667145;
 INTERCEPT = 0.00267552683439267;
+MAGNETIC_LENGTH = 125.27558356645;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-08:;
 MAG_TYPE = QUAD;
@@ -551,6 +559,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMDQM06;
 SLOPE = 0.111939163037871;
 INTERCEPT = -0.00132252769474545;
+MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-09:;
 MAG_TYPE = QUAD;
@@ -566,6 +575,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMDQM05;
 SLOPE = 0.111966157109812;
 INTERCEPT = -0.00170732356716569;
+MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-10:;
 MAG_TYPE = QUAD;
@@ -581,6 +591,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMDQM02;
 SLOPE = 0.112072763436341;
 INTERCEPT = -0.00182025848896622;
+MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-11:;
 MAG_TYPE = QUAD;
@@ -597,6 +608,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMIQM04;
 SLOPE = 1.58996386665694;
 INTERCEPT = 6.76912235527686E-05;
+MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Injection line\SCX Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-12:;
 MAG_TYPE = QUAD;
@@ -611,6 +623,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M06;
 SLOPE = 0.104257662272452;
 INTERCEPT = 0.0025714442257629;
+MAGNETIC_LENGTH = 125.299909233924;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-13:;
 MAG_TYPE = QUAD;
@@ -626,6 +639,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMIQM05;
 SLOPE = 1.59235070995081;
 INTERCEPT = -0.022877181714572;
+MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Injection line\SCX Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-14:;
 MAG_TYPE = QUAD;
